# obs-spice

./: CMakeLists.txt  obs-spice-source.c  obs-spice.c
cmake/: FindATK.cmake  FindCairo.cmake  FindGDK3.cmake  FindGDKPixbuf.cmake  FindGIO.cmake  FindGLib.cmake  FindGObject.cmake  FindGTK3.cmake  FindPango.cmake  FindSpice.cmake
data/locale/: en-US.ini
